--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -8,12 +8,12 @@ subtitle: ""
 description: ""
 keywords:
 author: 卡西法
-language: en
-timezone: ""
+language: zh-CN
+timezone: "Asia/Shanghai"
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://kaxifakl.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
