--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
 
         steps:
             - uses: actions/checkout@v4
+            - uses: actions/checkout@v4
               with:
                   repository: "kaxifakl/article-build"
                   path: "_article-build"
@@ -26,7 +27,6 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node-version }}
-            # - uses: actions/checkout@v4
             - run: |
                 cd _article-build
                 npm install --omit=dev
