--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ name: build
 on:
     workflow_dispatch:
     workflow_call:
-        
+
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -52,8 +52,8 @@ jobs:
                 pwd
                 # 一定要看到 .git
                 ls -a   
-                git config user.name "github-actions[bot]"
-                git config user.email "github-actions[bot]@users.noreply.github.com"
+                git config user.name "kaxifakl"
+                git config user.email "1813408689@qq.com"
 
                 git add -A
                 git commit -m "build: GitHub Action"
