--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,8 @@ name: build
 
 on:
     workflow_dispatch:
-    workflow_call:
+    repository_dispatch:
+        types: [trigger_build] 
 
 jobs:
     build:
