--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
                   token: ${{ secrets.PUSH_TOKEN }}
             - run: |
                 # 将 _article 内容复制到build
-                cp -r _article/doc/* ./_article-build/source
+                cp -r _article/docs/* ./_article-build/source
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v4
               with:
