--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,9 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
             - run: |
+                cd _article-build/themes/butterfly
+                npm install
+            - run: |
                 cd _article-build
                 npm install --omit=dev
                 npm run build
